--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ application {
 
 dependencies {
   compile group: 'io.netty', name: 'netty-all', version: netty_version
+  testCompile group: 'junit', name: 'junit', version: junit_version
 }
 
 sourceCompatibility = 1.8
